# meta_hack

./: .gitignore  AUDIT.md  Curriculum_v2.1_Documentation.md  Dockerfile  Project_Documentation_&_Round2_Upgrade_Guide.md  README.md  blog.md  docker-compose.yml  guide.md  inference.py  live_curl_test_report_2026-04-23.md  nginx.conf  openenv.yaml  pyproject.toml  requirements.txt  run_benchmark.py  serve_inference.py  serve_judge.py  start.sh  start_training.sh  stress_test.py  submit_training_job.py  test_complete.sh  test_features.sh  test_live.py  test_report.md  walkthrough.md  win_plan.md
.obsidian/: workspace.json
colab/: build_notebook.py  training_notebook.ipynb
docs/: AgentOS.md  CUSTOMER_SUPPORT_ENV_FULL_AUDIT_by_team_mate.md  CUSTOMER_SUPPORT_ENV_FULL_AUDIT_by_team_mate_v2.md  CUSTOMER_SUPPORT_ENV_FULL_AUDIT_by_team_mate_v3.md  REWARD_SYSTEM_GUIDE.md  Round2_Improvement_Plan_for_customer-support-env.md  claude_analysis_23_04_26_:12:04.md  claudes_plan_24-04-26.md  development.md  functional-noodling-petal.md  implementation_plan.md  test_after_huggg.md  test_usage_report_1.md  test_usage_report_2.md
env/: __init__.py  customer_simulator.py  environment.py  llm_judge.py  models.py  policy_engine.py  reward_engine.py  ticket_store.py  user_db.py
env/graders/: __init__.py  task_curriculum_basic.py  (+11 more)
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
server/: app.py
tests/: test_env.py  test_user_db.py
train/: __init__.py  action_parser.py  config.py  curriculum.py  env_client.py  evaluate.py  export_gguf.py  grpo_trainer.py  local_judge.py  merge_lora.py  model_utils.py  prompt_builder.py  reward_aggregator.py  rollout_collector.py  run_train.py  sft_warmstart.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothRLOOTrainer.py  UnslothSFTTrainer.py  moe_utils.py
(+75 files in other folders)
