[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for AI customer support agent training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "vaderSentiment>=3.3.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "openenv-core>=0.2.0",
    "structlog>=25.5.0",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
