[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for AI customer support agent training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "vaderSentiment>=3.3.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "openenv-core>=0.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
train = [
    "trl>=0.12.0",
    "peft>=0.13.0",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    # Install unsloth separately with the right CUDA variant:
    # pip install "unsloth[cu124-torch240]" or see https://github.com/unslothai/unsloth
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
